tests/control/if_dont_allow_assignments.esl
// error: expected expression

func main() {
    let i = 2137;

    if (i = 2137) {
        print("{}", 2137);
    }
}
